# pydantic_fun2

./: .gitattributes  .gitignore  2q  README.md  pyproject.toml
lib/: model.py  model_test.py
